# cryoCAT

./: .readthedocs.yaml  README.md  band.em  environment.yaml  pyproject.toml  setup.py
.github/workflows/: release.yml
cryocat/: _types.py  classutils.py  cli.py  cryomap.py  cryomaps.py  cryomask.py  cryomotl.py  cuboid_sampling.py  fsc.py  geom.py  imod.py  ioutils.py  mathutils.py  mdoc.py  membrane_thickness.py  memthick.py  motl_conversions.py  nnana.py  pana.py  quadric.py  ribana.py  scriptutils.py  sg_calculate_fsc.py  sta.py  starfileio.py  structure.py  surfsamp.py  tango.py  tgeometry.py  tiltstack.py  tmana.py  visplot.py  wedgeutils.py
cryocat/analysis/: clustering.py  memthick.py  nnana.py  pana.py  ribana.py  sta.py  structure.py  surfsamp.py  tango.py  tmana.py  visplot.py
cryocat/app/: app.py  apputils.py  callbacks.py  formgen.py  globalvars.py  logger.py  server.py
cryocat/app/assets/: styles.css
cryocat/app/components/: anglesbuilder.py  anglesfield.py  customel.py  graphsettings.py  logpanel.py  motlio.py  motlsink.py  motlsource.py  paletteloader.py  rotationbuilder.py  rotationfield.py  tablecluster.py  tableplot.py  tableview.py  tomoview.py  volumeview.py
cryocat/app/layout/: customel.py  graphsettings.py  motlio.py  motlload.py  motlsidebar.py  sidebar.py  table.py  tableplot.py  tableview.py  tomoview.py
cryocat/app/pages/: pmotl.py  ptango.py
cryocat/app/suite/: app.py  motlsidebar.py  tools.py
cryocat/app/tango/: __init__.py  app.py  callbacks.py  layout.py  sidebar.py  table.py
cryocat/core/: cryomap.py  cryomask.py  cryomotl.py  mdoc.py  quadric.py  surface.py  tiltstack.py
cryocat/utils/: classutils.py  exceptions.py  geom.py  imageutils.py  imod.py  ioutils.py  mathutils.py  scriptutils.py  starfileio.py  wedgeutils.py
docs/: conf.py  index.rst
docs/source/: api.rst  conf.py  index.rst  installing.rst  requirements.txt
docs/source/_static/: versions.json
docs/source/_templates/: class-page-toc.html  searchbox.html  sidebar_no_caption.html
docs/source/tutorials/: index.rst
docs/source/user_guide/: geometric_conventions.ipynb  index.rst  maps_basics.ipynb  masks_basics.ipynb  motl_advanced.ipynb  motl_basics.ipynb  preprocessing_basics.ipynb  tiltstack_basics.ipynb  wedgelist_basics.ipynb
notebooks/core_picking/: shape_sampling.ipynb
notebooks/peak_analysis/: peak_analysis.ipynb
notebooks/peak_analysis/inputs/: AGL_anglist_20_deg_c1.csv  AGL_anglist_30_deg_c1.csv  template_list.csv  tile_filt_48_t126_b4_f24.em  tmpl_filt_48_t126_b4_f24.em
notebooks/peak_analysis/outputs/: readme.txt
notebooks/polysome_analysis/: prepare_motls_new_classification.ipynb
tests/: pytest_test.py  test_classutils.py  test_cli.py  test_clustering.py  test_cryomap.py  test_cryomask.py  test_cryomotl.py  test_exceptions.py  test_fsc.py  test_geom.py  test_imageutils.py  test_imod.py  test_ioutils.py  test_logger.py  test_mathutils.py  test_mdoc.py  test_motl.py  test_nnana.py  test_pana.py  test_scriptutils.py  test_sta.py  test_starfileio.py  test_structure.py  test_surface.py  test_surfsamp.py  test_tango.py  test_tiltstack.py  test_tmana.py  test_visplot.py  test_wedgeutils.py
tests/generators/: mask_generator.py
tests/test_data/: au_1.em  au_2.em  col_missing.em  corr_fsc.csv  dc02t01_ctf.star  extra_col.em  nn_test_motl.em  npc_ref_A_px_1_inv.em  npc_ref_B_px_1_inv.em  relion_3.1_optics.star  sphere_r10_g2_bx32.em  tilt_stack.mrc
tests/test_data/TS_017/: 017.mdoc  017.tlt  017.xml  (+2 more)
(+292 files in other folders)
