[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "cryoCAT"
version = "0.5.0"
authors = [
  { name="Beata Turonova", email="beata.turonova@gmail.com" },
]
description = "Contextual Analysis Tools for CryoET"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "scipy>=1.9.1",
    "scikit-image>=0.20.0",
    "emfile>=0.3.0",
    "mrcfile>=1.4.3",
    "seaborn>=0.12.1",
    "scikit-learn>=1.0.2",
    "lmfit>=1.2.2",
    "h5py>=3.10.0",
    "numba>=0.60.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.1",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
license = {text = "GPLv3+"}
[tool.setuptools]
packages = ["cryocat"]
# include-package-data = true
[project.urls]
"Homepage" = "https://github.com/turonova/cryoCAT"
"Bug Tracker" = "https://github.com/turonova/cryoCAT/issues"
[project.scripts]
wedge_list = "cryocat.cli:wedge_list"
tm_ana = "cryocat.cli:tm_ana"
[tool.setuptools.package-data]
"cryocat" = ["example_files/*.tlt"]