[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "cryoCAT"
version = "0.8"
authors = [
  { name="Beata Turonova", email="beata.turonova@gmail.com" },
]
description = "Contextual Analysis Tools for CryoET"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "matplotlib>=3.10.9",
    "scipy>=1.17.1",
    "scikit-image>=0.26.0",
    "emfile>=0.3.0",
    "mrcfile>=1.5.4",
    "seaborn>=0.13.2",
    "scikit-learn>=1.8.0",
    "lmfit>=1.3.4",
    "h5py>=3.16.0",
    "numba>=0.65.1",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.3",
    "plotly==5.24",
    "dash>=4.1.0",
    "dash_bootstrap_components>=2.0.4",
    "dash_ag_grid>=35.2.0",
    "networkx>=3.6.1",
    "numpydoc>=1.10",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
license = {text = "GPLv3+"}
[tool.setuptools]
packages = ["cryocat"]
# include-package-data = true
[project.urls]
"Homepage" = "https://github.com/turonova/cryoCAT"
"Bug Tracker" = "https://github.com/turonova/cryoCAT/issues"
[project.scripts]
wedge_list = "cryocat.cli:wedge_list"
tm_ana = "cryocat.cli:tm_ana"
tango_app = "cryocat.app.app:tango_app"
[tool.setuptools.package-data]
"cryocat" = ["example_files/*.tlt"]
